[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/sidebar.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/guild_bar/guild_bar.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/channels/channel_list.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/direct/dm_list.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/sidebar/user_bar.tscn" id="5"]

[node name="Sidebar" type="HBoxContainer"]
offset_right = 308.0
offset_bottom = 600.0
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="GuildBar" parent="." instance=ExtResource("2")]
layout_mode = 2

[node name="ChannelPanel" type="VBoxContainer" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(240, 0)
theme_override_constants/separation = 0

[node name="ChannelList" parent="ChannelPanel" instance=ExtResource("3")]
layout_mode = 2

[node name="DMList" parent="ChannelPanel" instance=ExtResource("4")]
visible = false
layout_mode = 2

[node name="UserBar" parent="ChannelPanel" instance=ExtResource("5")]
layout_mode = 2
